<?xml version="1.0"?>
<package>
  <name>racecar_navigation</name>
  <version>0.0.0</version>
  <description>Files for autonomous navigation using the  racecar platform and the ROS Navigation stack.</description>

  <maintainer email="lpimentel3@gatech.edu">Luis Pimentel</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>